feat : config error message
